--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Start Menu -->
   <div id="start-menu" class="start-menu" hidden>
     <div class="start-menu-body">
-      <button id="start-new-source" class="menu-item">Add Source Window…</button>
+      <button id="start-new-source" class="menu-item">Add Source Window…</button>      
     </div>
   </div>
 
@@ -57,6 +57,7 @@
   <div id="obs-settings" class="hidden">
     <div class="obs-tabs-wrapper">
       <!-- CONTENT: Settings -->
+    
       <div id="obs-tabpane-settings" class="obs-tabpane active">
         <form id="obs-connect-form" class="form-grid" autocomplete="off">
           <h3>OBS WebSocket</h3>
@@ -120,6 +121,6 @@
     </div>
   </div>
 
-  <script src="desktop.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
